--- a/src/main/resources/templates/cocktails.html
+++ b/src/main/resources/templates/cocktails.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" th:href="@{/output.css}" />
 
     <meta charset="UTF-8">
-    <title>Liste des Cocktails</title>
+    <title>All Cocktails</title>
 </head>
 <body >
 <div class=" flex flex-col fixed top-0 left-0 right-0 bg-blue-200 opacity-90 z-10 justify-center w-full">
