--- a/src/main/resources/templates/cocktails.html
+++ b/src/main/resources/templates/cocktails.html
@@ -8,8 +8,9 @@
     <title>All Cocktails</title>
 </head>
 <body >
-<div class=" flex flex-col fixed top-0 left-0 right-0 bg-blue-200 opacity-90 z-10 justify-center w-full">
-<a class=" text-4xl	text-center text-red-950  py-8 " >Liste des Cocktails</a>
+<div class=" flex flex-row fixed top-0 left-0 right-0 bg-blue-200 opacity-90 z-10 justify-between w-full">
+<a class=" text-4xl	text-left text-red-950  py-8 " >Liste des Cocktails</a>
+<a class=" text-2xl	text-right text-blue-900  py-8 " th:href="@{/cocktails/random}">afficher un cocktail au hasard</a>
 </div>
 <div class="pt-32">
 <div class="flex flex-row flex-wrap">
