--- a/src/main/resources/templates/randomcocktail.html
+++ b/src/main/resources/templates/randomcocktail.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body th:each="drink : ${cocktail}">
+<body th:each="drink : ${thisCocktail}">
 
 <a class="text-end pb-4" th:href="@{/cocktails}" >retour à la liste</a>
 
